CI: update platforms
- Use latest CentOS 6 and 7
- Bump Xcode to 11.3.1

--- a/.azure-pipelines/azure-pipelines-base.yml
+++ b/.azure-pipelines/azure-pipelines-base.yml
@@ -31,11 +31,11 @@ stages:
     - template: ./base-linux.yml
       parameters:
         distribution: centos
-        version: [6, 10]
+        version: [6]
     - template: ./base-linux.yml
       parameters:
         distribution: centos
-        version: [7, 7, 1908]
+        version: [7]
     - template: ./base-linux.yml
       parameters:
         distribution: ubuntu
