--- a/.azure-pipelines/azure-pipelines-nightly.yml
+++ b/.azure-pipelines/azure-pipelines-nightly.yml
@@ -32,11 +32,11 @@ stages:
     - template: ./conda-linux.yml
       parameters:
         distribution: centos
-        version: [6, 10]
+        version: [6]
     - template: ./conda-linux.yml
       parameters:
         distribution: centos
-        version: [7, 7, 1908]
+        version: [7]
     - template: ./conda-linux.yml
       parameters:
         distribution: centos
@@ -56,7 +56,7 @@ stages:
     - template: ./conda-osx.yml
       parameters:
         vmImage: [10, 14]
-        xcode_version: [11, 2, 1]
+        xcode_version: [11, 3, 1]
     - template: ./conda-osx.yml
       parameters:
         vmImage: [10, 14]
